--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container text-center">
     <div id="header">
-      <h3 class="text-center">Welcome to the testing room</h3>
+      <h4 class="text-center">Welcome to the testing room</h4>
     </div>
     <div id="testing" class="mx-auto">
         <div id="testing-controls">
@@ -50,13 +50,11 @@
     </div>
   </div>
   <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <small class="text-center">Written by <strong><a href="mailto:karlisidornygren@gmail.com">Isidor Nygren</a></strong>
-          For the course Student Conference in Computing Science at Umeå University 2017</small>
-        </div>
-      </div>
+    <div class="container text-center">
+      <small>Written by <strong><a href="mailto:karlisidornygren@gmail.com">Isidor Nygren</a></strong>
+      For the course Student Conference in Computing Science at Umeå University 2017</small>
+      <br>
+      <small>license: <a href="https://opensource.org/licenses/MIT">MIT</a> | <a href="https://github.com/isidornygren/synestesic-test">source code</a></small>
     </div>
   </footer>
   </body>
